# BTL-IOT-

./: .gitignore  README.md  README_WEB_APP.md  backendREvAudio.py  firmwere_client.rar  pyproject.toml  run_web_app.bat  sd.txt  test1.py  transcripts.txt
CodeESP32/SLAVE/: ESP32_MultiThread_IoT.ino  ESP32_MultiThread_IoT.rar  gpioManager.cpp  gpioManager.h  mqtt.cpp  mqtt.h  settings.cpp  wifiStation.cpp
CodeESP32/esp32_demo_sender/: esp32_demo_sender.ino
CodeESP32/racs/: HUONG_DAN_SU_DUNG.md  README_ESP32.md
CodeESP32/sketch_sep21a/: 1-testRealtimeSTT.ino  sketch_sep21a.ino
btlLTM/: CoAPClient.py  CoAPMessageXuLI.py  CoAPServer.py  CoAPSimClient.py  TestMQTT.py  client_MQTT_broker.py  huong_dan_dung.md  publish_20_messages.py  sever_broker.py  test_time_precision.py
client/: README.md  package-lock.json  package.json
client/firmware_client/: BUILD_GUIDE.md  ESP32_MultiThread_IoT.ino  gpioManager.cpp  mqtt.cpp  mqtt.h  (+2 more)
hivemqdoamnhietdo/: hivemqdoamnhietdo.ino
iot-backend/: .env  .gitignore  API_TEST_GUIDE.md  CONVERSATION_SERVICE_GUIDE.md  FileKhongLienQuanLTM.md  HuongDanChay.md  POSTMAN_TEST_GUIDE.md  QUICK_START.md  STTSystem_Class_Diagram.xml  TOOL_SERVICE_GUIDE.md  frontend_test.html  mqtt_config_example.py  requirements.txt  run_test_server.py  start_test.bat  start_test.sh  test_audio_websocket.py  test_connectiondb.py  test_conversation_service.py  test_mqtt_integration.py  test_mqtt_simple.py  test_requirements.txt  test_tools.py
ketnoiwwifivadodoam/: ketnoiwwifivadodoam.ino
sketch_sep25a/: sketch_sep25a.ino
templates/: index.html
(+70 files in other folders)
