[project]
name = "package"
version = "0.1.0"
description = ""
authors = [
    {name = "zijn26",email = "hungvungoc79@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
python = "^3.8"
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
supabase = "2.3.4"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
passlib = { version = "1.7.4", extras = ["bcrypt"] }
python-multipart = "0.0.6"
google-generativeai = "0.3.0"
gTTS = "2.4.0"
websockets = "12.0"
httpx = "0.25.0"
python-dotenv = "1.0.0"
python-dateutil = "2.8.2"
